@@ -24,6 +24,7 @@
 
 #include <iostream>	/* Debugging */
 #include "gamewin.h"
+#include "gamemap.h"
 #include "drag.h"
 #include "Gump_button.h"
 #include "Gump.h"
@@ -54,7 +55,6 @@ Dragging_info::Dragging_info
 	    readied_index(-1), mousex(-1), mousey(-1), rect(0, 0, 0, 0),
 	    save(0), okay(true), possible_theft(false)
 	{
-	Game_window *gwin = Game_window::get_instance();
 	rect = gwin->get_shape_rect(obj);
 	rect.enlarge(8);		// Make a little bigger.
 					// Create buffer to backup background.
@@ -73,7 +73,6 @@ Dragging_info::Dragging_info
 	    readied_index(-1), mousex(x), mousey(y), rect(0, 0, 0, 0),
 	    save(0), okay(false), possible_theft(false)
 	{
-	Game_window *gwin = Game_window::get_instance();
 					// First see if it's a gump.
 	gump = gwin->get_gump_man()->find_gump(x, y);
 	if (gump)
@@ -144,7 +143,6 @@ bool Dragging_info::start
 	int x, int y			// Mouse position.
 	)
 	{
-	Game_window *gwin = Game_window::get_instance();
 	if (x - mousex <= 2 && mousex - x <= 2 &&
 	    y - mousey <= 2 && mousey - y <= 2)
 		return (false);		// Wait for greater motion.
@@ -207,7 +205,6 @@ bool Dragging_info::moved
 	{
 	if (!obj && !gump)
 		return (false);
-	Game_window *gwin = Game_window::get_instance();
 	if (rect.w == 0)
 		{
 		if (!start(x, y))
@@ -253,7 +250,6 @@ bool Dragging_info::drop
 	)
 	{
 	bool handled = moved;
-	Game_window *gwin = Game_window::get_instance();
 	if (button)
 		{
 		button->unpush();
@@ -343,7 +339,6 @@ bool Dragging_info::drop_on_gump
 	Gump *on_gump			// Gump to drop it on.
 	)
 	{
-	Game_window *gwin = Game_window::get_instance();
 	if (!Check_weight(gwin, to_drop, on_gump->get_cont_or_actor(x,y)))
 		return false;
 	if (on_gump != gump)		// Not moving within same gump?
@@ -375,7 +370,6 @@ bool Dragging_info::drop_on_map
 	Game_object *to_drop		// == obj if whole thing.
 	)
 	{
-	Game_window *gwin = Game_window::get_instance();
 	int max_lift = cheat.in_hack_mover() ? 13 :
 					gwin->get_main_actor()->get_lift() + 4;
 					// Drop where we last painted it.
@@ -427,7 +421,6 @@ bool Dragging_info::drop
 	)
 	{
 	extern int Prompt_for_number(int, int, int, int);
-	Game_window *gwin = Game_window::get_instance();
 					// Get orig. loc. info.
 	int oldcx = old_pos.tx/c_tiles_per_chunk, 
 	    oldcy = old_pos.ty/c_tiles_per_chunk;
@@ -455,7 +448,7 @@ bool Dragging_info::drop
 			  : drop_on_map(x, y, to_drop)))
 		return false;
 	if (!gump)			// Do eggs where it came from.
-		gwin->get_chunk(oldcx, oldcy)->activate_eggs(obj,
+		gmap->get_chunk(oldcx, oldcy)->activate_eggs(obj,
 			    old_pos.tx, old_pos.ty, old_pos.tz, 
 					old_pos.tx, old_pos.ty);
 	else if (readied_index >= 0)
@@ -563,7 +556,7 @@ bool Game_window::drop_at_lift
 	int ty = (scrollty + y/c_tilesize)%c_num_tiles;
 	int cx = tx/c_tiles_per_chunk;
 	int cy = ty/c_tiles_per_chunk;
-	Map_chunk *chunk = get_chunk(cx, cy);
+	Map_chunk *chunk = map->get_chunk(cx, cy);
 	int lift;			// Can we put it here?
 	Shape_info& info = to_drop->get_info();
 	int xtiles = info.get_3d_xtiles(), ytiles = info.get_3d_ytiles();
