@@ -122,6 +122,7 @@ public:
 					// Get direction to another object.
 	int get_direction(Game_object *o2) const;
 	int get_direction(Tile_coord t2) const;
+	Map_chunk *get_chunk();		// Get chunk this is in.
 	int get_quality() const
 		{ return quality; }
 	void set_quality(int q)
